# semidiscrete

./: .gitignore  CMakeLists.txt  README.org
examples/: coresets.cpp  semidiscrete.cpp
include/: functors.hpp  io.hpp  linesearch.hpp  optimize.hpp  params.hpp  samplers.hpp
